2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check whether specified collection is
	  iterable in foreach statements, fixes bug 434514

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: allow any integer type as index in an
	  element access expression, fixes bug 434506

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valasymbolbuilder.vala,
	  vala/valaattributeprocessor.vala, vala/valasemanticanalyzer.vala,
	  vala/valacodegenerator.vala, vala/valainterfacewriter.vala,
	  vala/valaflags.vala: add basic support for flags, fixes bug 434511

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check that void return values are not
	  used, fixes bug 434503

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix type check in relational
	  operations, fixes bug 434507

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: add pointer to integer conversion in
	  foreach statements, fixes bug 433288

2007-04-24  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add g_bit_nth_lsf, g_bit_nth_msf, and
	  g_bit_storage

2007-04-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacallback.vala: add possibility to override default cname
	* vala/valaattributeprocessor.vala: process callback attributes
	* vala/valainterfacewriter.vala: cleanup code to write identifiers

2007-04-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: use const types where appropriate,
	  fixes bug 428393

2007-04-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: simplify unref expression for non-null
	  types
	* vala/valaclass.vala: don't mark fields as non-null due to
	  initialization issue

2007-04-12  Jürg Billeter  <j@bitron.ch>

	* vala/valatypereference.vala: add is_null property
	* vala/valasemanticanalyzer.vala: fix type analysis in conditional and
	  parenthesized expressions, fixes bug 428368